fix text align in mobile banner

--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -2993,7 +2993,7 @@ body {
     -ms-flex-align: center;
     align-items: center;
     padding: 0 8.53333vmin;
-    padding-right: 32px;
+    padding-right: 8.53333vmin;
     min-height: 49.86667vmin;
     max-width: 82.93333vmin; } }
 
