--- a/src/scss/sсss-components/_mobile-banner.scss
+++ b/src/scss/sсss-components/_mobile-banner.scss
@@ -22,7 +22,7 @@
         flex-direction: column;
         align-items: center;
         padding: 0 vmin(32);
-        padding-right: 32px;
+        padding-right: vmin(32);
         min-height: vmin(187);
         max-width: vmin(311);
     }
